--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ version=5.2.12.BUILD-SNAPSHOT
 org.gradle.jvmargs=-Xmx1536M
 org.gradle.caching=true
 org.gradle.parallel=true
+org.configureondemand=true
+org.gradle.daemon=true
