--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,14 @@
 pluginManagement {
 	repositories {
 		gradlePluginPortal()
+		maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 }
 apply from: "$rootDir/gradle/build-cache-settings.gradle"
 
 include "spring-aop"
-//include "spring-aspects"
+include "spring-aspects"
 include "spring-beans"
 include "spring-context"
 include "spring-context-support"
