--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
         maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
+		mavenCentral()
+		maven { url "https://repo.spring.io/libs-spring-framework-build" }
     }
 }
 plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'io.spring.gradle-enterprise-conventions' version '0.0.2'
+//	id 'io.spring.gradle-enterprise-conventions' version '0.0.2'
 	id 'io.spring.nohttp' version '0.0.5.RELEASE'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 	id 'org.jetbrains.dokka' version '0.10.1'
@@ -26,6 +28,8 @@ allprojects {
         maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
+		mavenCentral()
+		maven { url "https://repo.spring.io/libs-spring-framework-build" }
     }
 }
 apply from: "$rootDir/gradle/build-scan-user-data.gradle"
@@ -294,10 +298,14 @@ configure(allprojects) { project ->
 		}
 		repositories {
 			mavenLocal()
-			//mavenCentral()
+			mavenCentral()
 			maven { url "https://repo.spring.io/snapshot" } // reactor
 			maven { url "https://repo.springsource.org/plugins-release" }
 			maven { url "https://repo.spring.io/libs-spring-framework-build" }
+			maven { url "https://maven.aliyun.com/repository/central" }
+			maven { url "https://repo.spring.io/libs-release" }
+			maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+			maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		}
 	}
 	configurations.all {
