--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 pluginManagement {
 	repositories {
 		gradlePluginPortal()
+		maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
 		maven { url 'https://repo.spring.io/plugins-release' }
 	}
 }
